updates & minor changes

--- a/public/style.css
+++ b/public/style.css
@@ -1,25 +1,25 @@
 /****** Main Styling ******/
 
 body {
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	color: #222;
-	background-color: #FaFaFa;
-	text-align: center;
-	line-height: 1.4em;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #222;
+  background-color: #FaFaFa;
+  text-align: center;
+  line-height: 1.4em;
 }
 
 .container {
-	padding: 0;
-	margin-top: 40px;
+  padding: 0;
 }
 
 h3 {
   margin-top: 30px;
 }
 
+.container,
 .footer {
-	margin-top: 40px;
+  margin-top: 40px;
 }
 
 .user-stories {
@@ -35,10 +35,10 @@ code {
   background-color: #fff;
 }
 ol {
-	list-style-position: outside;
+  list-style-position: outside;
 }
 ul {
-	list-style-type: none;
+  list-style-type: none;
 }
 
 li {
@@ -49,5 +49,5 @@ li {
 }
 
 a {
-	color: #2574A9;
+  color: #2574A9;
 }
